1.21.8 port: toolchain (M1), delta inventory (M2), vendored rebase (M3)
M1: plain-NeoForge toolchain builds clean on 1.21.8 (patches/, buildSrc/,
gradle.properties, build.gradle updated; Bukkit/Paper/Purpur layer staged out).
M2: measured Youer's true residue over NeoForge+Paper+Purpur - 34 files
(~26KB) of genuinely original code, AT delta is purely additive (739 lines).
M3: org/bukkit, io/papermc, org/purpurmc, co/aikar and related packages
rebased onto Paper/Purpur ver/1.21.8; compileJava reduced to only
net.minecraft.* patch gaps (Entity.DefaultDrop, PlayerList.LoginResult,
ChestBlock.DoubleInventory), which is exactly M3's exit criterion.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>